--- a/setup/package.json
+++ b/setup/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "@dependency/hostCLIAdapter": "https://github.com/AppScriptIO/hostCLIAdapter",
         "@dependency/appDeploymentEnvironment": "https://github.com/AppScriptIO/appDeploymentEnvironment",
-        "@dependency/appDeploymentLifecycle": "https://github.com/AppScriptIO/appDeploymentLifecycle"
+        "@dependency/appDeploymentLifecycle": "https://github.com/AppScriptIO/appDeploymentLifecycle",
+        "resolve": "^1.8.1"
     },
     "main": "./entrypoint.js"
 
