✒ Container manager entrypoint & ✒ console log aesthetics.

--- a/setup/package.json
+++ b/setup/package.json
@@ -5,8 +5,6 @@
         "@dependency/appDeploymentLifecycle": "https://github.com/AppScriptIO/appDeploymentLifecycle",
         "@dependency/appDeploymentManager": "https://github.com/AppScriptIO/appDeploymentManager",
         "@dependency/hostCLIAdapter": "https://github.com/AppScriptIO/hostCLIAdapter",
-        "@dependency/javascriptTestRunner": "https://github.com/AppScriptIO/javascriptTestRunner",
-        "resolve": "^1.8.1"
-    },
-    "main": "./entrypoint.js"
+        "@dependency/javascriptTestRunner": "https://github.com/AppScriptIO/javascriptTestRunner"
+    }
 }
