--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "rethinkdb": "*"
     },
     "devDependencies": {
-        "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager",
-        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
-        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation"
+        "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^1.x.x",
+        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
+        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x"
     }
 }
