--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
         "test": "yarn run scriptManager test \"({ testPath: './test' })\""
     },
     "dependencies": {
-        "@dependency/ModuleContext": "https://github.com/AppScriptIO/moduleContext",
-        "@dependency/commonPattern": "https://github.com/AppScriptIO/commonPattern",
-        "@dependency/databaseUtility": "https://github.com/AppScriptIO/databaseUtility",
+        "@dependency/classMixin": "git+https://github.com/AppScriptIO/classMixin.git",
+        "@dependency/commonPattern": "git+https://github.com/AppScriptIO/commonPattern.git",
+        "@dependency/databaseUtility": "git+https://github.com/AppScriptIO/databaseUtility.git",
         "@dependency/moduleContext": "https://github.com/AppScriptIO/moduleContext",
-        "@dependency/multiplePrototypeChain": "https://github.com/AppScriptIO/multiplePrototypeChain",
-        "@dependency/populateObjectPropertyFromObject": "https://github.com/AppScriptIO/populateObjectPropertyFromObject",
-        "@dependency/promiseProperRace": "https://github.com/AppScriptIO/promiseProperRace",
-        "@dependency/prototypeChainDebug": "https://github.com/AppScriptIO/prototypeChainDebug",
-        "mixwith": "*",
+        "@dependency/multiplePrototypeChain": "git+https://github.com/AppScriptIO/multiplePrototypeChain.git",
+        "@dependency/populateObjectPropertyFromObject": "git+https://github.com/AppScriptIO/populateObjectPropertyFromObject.git",
+        "@dependency/promiseProperRace": "git+https://github.com/AppScriptIO/promiseProperRace.git",
+        "@dependency/prototypeChainDebug": "git+https://github.com/AppScriptIO/prototypeChainDebug.git",
         "rethinkdb": "*"
     },
     "devDependencies": {
-        "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^1.x.x",
-        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
-        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x"
+        "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
+        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
+        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation"
     }
 }
