⚗ Change switch functions and implemenations to generator functions.
& 
• Merge common functionality of Entity prototype.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,6 @@
     "eslint.codeAction.showDocumentation": {
         "enable": true
     },
-    "typescript.check.npmIsInstalled": false
+    "typescript.check.npmIsInstalled": false,
+    "eslint.enable": true
 }
