--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
     "name": "@dependency/nodeRelationshipGraph",
-    "version": "0.1.0",
-    "main": "./source/entrypoint/programmaticApi/transpilation.entrypoint.js",
-    "files": [
-        "./distribution"
-    ],
+    "version": "1.0.0",
+    "main": "./entrypoint/programmaticAPI",
     "scripts": {
         "setup": "yarn install --production=false",
         "sleep": "yarn run scriptManager sleep '.setInterval()' ",
-        "test": "yarn run scriptManager test \"({ testPath: './test' })\"",
+        "test": "export NODE_OPTIONS='--inspect-brk' && yarn run scriptManager test \"({ testPath: './test' })\"",
         "generateTypes": "tsc --project ./configuration/typescript.config.json"
     },
     "dependencies": {
         "@dependency/classMixin": "git+https://github.com/AppScriptIO/classMixin.git",
         "@dependency/commonPattern": "git+https://github.com/AppScriptIO/commonPattern.git",
         "@dependency/databaseUtility": "git+https://github.com/AppScriptIO/databaseUtility.git",
-        "@dependency/entity": "https://github.com/AppScriptIO/entity",
-        "@dependency/moduleContext": "https://github.com/AppScriptIO/moduleContext",
+        "@dependency/entity": "https://github.com/AppScriptIO/entity#semver:^1.x.x",
+        "@dependency/moduleContext": "https://github.com/AppScriptIO/moduleContext#semver:^1.x.x",
         "@dependency/multiplePrototypeChain": "git+https://github.com/AppScriptIO/multiplePrototypeChain.git",
         "@dependency/promiseProperRace": "git+https://github.com/AppScriptIO/promiseProperRace.git",
         "@dependency/prototypeChainDebug": "git+https://github.com/AppScriptIO/prototypeChainDebug.git",
@@ -24,8 +21,8 @@
     },
     "devDependencies": {
         "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
-        "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis",
-        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation",
+        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
+        "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
         "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
         "typescript": "^3.3.3333"
     }
