✒ Use concrete behavior functionality to retrieve prototype specific behavior.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dependency/nodeRelationshipGraph",
+    "name": "@dependency/graph",
     "version": "1.1.8",
     "main": "./entrypoint/programmaticAPI",
     "scripts": {
