--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@dependency/graph",
-    "version": "1.2.1",
+    "name": "@dependency/graphTraversal",
+    "version": "1.2.2",
     "main": "./entrypoint/programmaticAPI",
     "scripts": {
         "setup": "yarn install --production=false",
