--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "export NODE_OPTIONS='--inspect-brk' && yarn run scriptManager JSProject/test \"({ testPath: ['./test'], shouldDebugger: false, shouldCompileTest: true })\"",
 		"build": "yarn run scriptManager shouldCompileScript=true JSProject/buildSourceCode \".moduleProject({}, {compile:[/**'./test'*/]})\"",
 		"bumpVersion": "yarn run scriptManager shouldCompileScript=true JSProject/packageVersion \".bumpVersion({})\"",
-		"buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\""
+		"buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\"",
+		"loadGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/graphDataLoading.js \".loadGraphDataFromFile({ shouldClearDatabase: true, graphDataFilePath: './test/asset/graphData.exported.json',  url: { protocol: 'bolt', hostname: 'localhost', port: 7686 }  })\""
 	},
 	"dependencies": {
 		"@dependency/classMixin": "https://github.com/AppScriptIO/classMixin#semver:^1.x.x",
