📦 Bump package.json version.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,22 +56,23 @@
         "sideBar.background": "#000000",
         "editor.selectionBackground": "#135564",
         "editor.selectionHighlightBorder": "#135564",
-        "activityBar.background": "#d115e2",
-        "activityBar.activeBorder": "#ccbd13",
+        "activityBar.background": "#78501b",
+        "activityBar.activeBorder": "#239c68",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ccbd13",
-        "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#d115e2",
-        "titleBar.inactiveBackground": "#d115e299",
+        "activityBarBadge.background": "#239c68",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "titleBar.activeBackground": "#78501b",
+        "titleBar.inactiveBackground": "#78501b99",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#d115e2",
-        "statusBarItem.hoverBackground": "#de3ded",
+        "statusBar.background": "#78501b",
+        "statusBarItem.hoverBackground": "#a26c24",
         "statusBar.foreground": "#e7e7e7"
     },
     "peacock.color": "#de3ded",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
-    }
+    },
+    "peacock.remoteColor": "#a16c25"
 }
